# policy_sentry

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .readthedocs.yml  .safety-policy.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  ROADMAP.md  app.py  index.html  justfile  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  travis.yml
.github/: PULL_REQUEST_TEMPLATE  dependabot.yml  release-drafter.yml
.github/scripts/: update_data.py
.github/workflows/: bump-version.yml  ci.yml  publish.yml  python-dependency-updater.yml  release-drafter.yml  test.yml  update.yml
HomebrewFormula/: policy_sentry.rb
docs/: cheat-sheet.md  conf.py  custom.css  index.md  index.rst  installation.md  introduction.md  requirements.txt  tutorial.md
docs/appendices/: comparison-to-related-tools.md  comparison-to-related-tools.rst  iam-policies.md  implementation-strategy.md  implementation-strategy.rst  index.rst  minimization.md
docs/appendix/: implementation-strategy.rst  policy_sentry-as-a-python-package.rst
docs/contributing/: contributing.md  contributing.rst  disclaimer.rst  documentation.md  documentation.rst  iam-database.md  iam-database.rst  index.rst  internals.rst  project-structure.rst  release-drafter.md  roadmap.md  roadmap.rst  testing.md  testing.rst  versioning.md  versioning.rst
docs/iam-knowledge/: iam-policies.rst  minimization.rst
docs/introduction/: comparison-to-similar-tools.rst  home.rst  introduction.rst
docs/library-usage/: analyzing.md  expanding.md  getting-started-with-the-library.md  getting-started-with-the-library.rst  index.md  index.rst
docs/module-index/: modules.rst  policy_sentry.analysis.rst  policy_sentry.command.rst  policy_sentry.configuration.rst  policy_sentry.downloading.rst  policy_sentry.querying.rst  policy_sentry.rst  policy_sentry.scraping.rst  policy_sentry.shared.rst  policy_sentry.util.rst  policy_sentry.writing.rst
docs/other/: docker.md  initialize.md  terraform.md
docs/querying/: action-table.md  arn-table.md  condition-table.md  querying.md
docs/terraform/: terraform-demo.rst  terraform-modules.rst
docs/user-guide/: analyze-policy.rst  cheat-sheet.rst  command-cheat-sheet.rst  docker.rst  downloading-policies.rst  importing-as-a-python-package.rst  initialize.rst  installation.rst  querying-the-database.rst  usage-as-a-python-package.rst  write-policy.rst
docs/writing-policies/: access-levels-example.md  actions-mode.md  assume-role-actions.md  crud-mode.md  excluding-actions.md  minimization.md  overrides.md  wildcard-dependent-actions.md
examples/analyze/: explicit-actions.json  wildcards.json
examples/asciinema/: policy_sentry.cast
examples/input-dir/: policy-zebu.yml
examples/library-usage/: example.py
examples/output-dir/: policy-zebu.json
examples/terraform/: README.md  requirements.txt
examples/third-party-package/: example.py
examples/yml/: actions.yml  crud-rds-mult.yml  crud-rds.yml  crud-with-exclude-actions-empty-sid.yml  crud-with-exclude-actions.yml  crud-with-override.yml  crud-with-wildcard-service-level.yml  crud-with-wildcard.yml  crud.yml  tagging.yml
hooks/: minify_iam_data.py
policy_sentry/: __init__.py
policy_sentry/analysis/: README.md  analyze.py  expand.py  finding.py  report.py
policy_sentry/command/: __init__.py  analyze.py  analyze_iam_policy.py  create_template.py  initialize.py  (+5 more)
static/: custom.css  custom.js
templates/: home_page.html
terraform_module/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
test/: test_access_level_overrides.py  test_actions.py  test_analyze.py  test_arn_action_group.py  test_arns.py  test_expand_wildcard_actions.py  test_minimize_wildcard_actions.py  test_query.py  test_refactor.py  test_template.py  test_template_validation.py  test_write_policy.py  test_write_policy_library_usage.py  test_yaml.py  test_yaml_validation.py
utils/: bump-version.sh  copy_docs.py  download-docs.sh  download_docs.py  download_iam_dataset.py  entrypoint.sh  get_links.py  grab-docs.sh  links.txt  requirements.txt  run_tests.sh  update-brew.sh
(+984 files in other folders)
