[project]
name = "policy_sentry"
dynamic = ["version"]
description = "Generate locked-down AWS IAM Policies"
authors = [
    { name = "Kinnaird McQuade", email = "kinnairdm@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["aws", "iam", "roles", "policy", "policies", "privileges", "security"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.14.0",
    "click>=8.1.0",
    "requests>=2.32.0",
    "schema>=0.7.0",
    "PyYAML>=6.0.0",
    "orjson>=3.11.0",
]

[project.scripts]
policy_sentry = "policy_sentry.bin.cli:main"

[project.urls]
Homepage = "https://github.com/salesforce/policy_sentry"
Repository = "https://github.com/salesforce/policy_sentry"
Code = "https://github.com/salesforce/policy_sentry/"
Documentation = "https://policy-sentry.readthedocs.io/"
"Red Team Report" = "https://opensource.salesforce.com/policy_sentry"
Twitter = "https://twitter.com/kmcquade3"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "mypy>=1.18.0",
    "prek>=0.2.10,<0.3.0",
    "pytest>=8.4.0",
    "rust-just>=1.43.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.12",
    "types-requests>=2.32.4",
]

docs = [
    # unique to ReadTheDocs
    "atomicwrites>=1.4.0,<2.0.0",
    "distlib>=0.4.0,<0.5.0",
    "docutils>=0.22.0,<0.23.0",
    "filelock>=3.20.0,<4.0.0",
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.6.0,<10.0.0",
    "mkdocs-material-extensions>=1.3.0,<2.0.0",
    "mkdocstrings>=0.30.0,<0.31.0",
    "mkdocstrings-python>=1.18.0,<2.0.0",
    "mkdocstrings-python-legacy>=0.2.0,<0.3.0",
    "pygments>=2.19.0,<3.0.0",
    "pymdown-extensions>=10.16.0,<11.0.0",
    "pytkdocs>=0.16.0,<0.17.0",
    # Trying to see if RTFD needs these
    "markdown>=3.9.0,<4.0.0",
    "markupsafe>=3.0.0,<4.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "typed-ast>=1.5.0,<2.0.0",
]

[build-system]
# `uv_build` backend doesn't support build hooks yet https://github.com/astral-sh/uv/issues/14561
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hooks/minify_iam_data.py"

[tool.hatch.build.targets.sdist]
include = [
    "/hooks",
    "/policy_sentry",
    "/test",
]
exclude = [
    "/policy_sentry/shared/data/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["policy_sentry"]

[tool.hatch.version]
path = "policy_sentry/bin/version.py"

[tool.mypy]
files = "policy_sentry"

python_version = "3.10" # should be identical to the minimum supported version
local_partial_types = true # will become the new default from version 2
allow_redefinition_new = true # will become the new default from version 2
fixed_format_cache = true # new caching mechanism
strict = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "schema"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "E",
    "F",
    "FURB",
    "I",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLE",
    "PLW",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T10",
    "TC",
    "UP",
    "W",
    "YTT",
]
ignore = ["E501"] # ruff fromat takes care of it

fixable = ["I001"]

[tool.pytest.ini_options]
testpaths = [
    "test",
    "test/analysis",
    "test/command",
    "test/querying",
    "test/util",
    "test/writing",
]
norecursedirs = [
    "_build",
    "tmp*",
    "__pycache__",
]

[tool.coverage.report]
omit = [
    "policy_sentry/shared/awsdocs.py",
    # omit anything in a .local directory anywhere
    "*/.local/*",
    "*/virtualenv/*",
    "*/venv/*",
    "*/.venv/*",
    "*/docs/*",
    "*/examples/*",
    "utils/*",
]

[tool.uv]
required-version = "~=0.9.0"
